--- a/forexglobal/app/sass/blocks/main/header.scss
+++ b/forexglobal/app/sass/blocks/main/header.scss
@@ -14,7 +14,7 @@
     }
     
     .header__logo {
-      width: 100px;
+      width: 150px;
     }
     
     .nav,
@@ -90,43 +90,12 @@
   }
 }
 
-.header__accounts {
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  background: rgba(47, 40, 97, 0.5);
-  list-style: none;
-  transition: 0.5s;
-  z-index: 2;
-  
-  li {
-    
-    a {
-      color: #fff;
-      border: none;
-      transition: 0.3s;
-      
-      &:hover {
-        color: #fff;
-        font-weight: 500;
-        background: rgba(47, 40, 97, 0.7);
-      }
-    }
-  }
-  
-  &--closed {
-    display: none;
-    // opacity: 0;
-  }
-  
-  &--opened {
-    display: block;
-    // opacity: 1;
-    // z-index: 2;
-  }
+.header__language {
+  position: relative;
 }
 
-.header__language {
+.header__select {
+  position: relative;
   width: 70px;
   height: 43px;
   padding: 0 20px;
@@ -136,21 +105,38 @@
   font-family: inherit;
   border: 1px solid $mc;
   border-radius: 3px;
-  background: transparent url('../img/svg/nav-arrow.svg') no-repeat right;
-  background-position-x: 50px;
-  background-size: 6px 3px;
+  background-color: transparent;
   appearance: none;
   transition: 0.3s linear;
   cursor: pointer;
   outline: none;
   
+  .header__option {
+    padding: 10px 0;
+    color: $mc;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: $sc;
+  }
+
   &:hover,
   &:focus {
     color: $sc;
-    background: $mc url('../img/svg/nav-arrow-h.svg') no-repeat right;
-    background-position-x: 50px;
-    background-size: 6px 3px;
+    background-color: $mc;
+    
+    & + .header__icon {
+      fill: $sc;
+      transform: rotate(180deg);
+    }
   }
+}
+
+.header__icon {
+  fill: $mc;
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transition: 0.3s;
 }
 
 @media screen and ($tablet-widths) {
