--- a/forexglobal/app/sass/global/fonts.scss
+++ b/forexglobal/app/sass/global/fonts.scss
@@ -23,6 +23,7 @@
     url('../fonts/SFUIDisplay-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +33,7 @@
     url('../fonts/SFUIDisplay-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -41,6 +43,7 @@
     url('../fonts/SFUIDisplay-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -50,6 +53,7 @@
     url('../fonts/SFUIDisplay-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -59,6 +63,7 @@
     url('../fonts/SFUIDisplay-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 // @font-face {
