--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -21,7 +21,7 @@
 .gallery__item {
   position: relative;
   height: 250px;
-  cursor: pointer;
+  // cursor: pointer;
   outline: none;
   overflow: hidden;
   
@@ -49,45 +49,45 @@
     width: 50%;
   }
     
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0;
-    transition: 0.3s;
-  }
-  
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    background-image: url('../img/svg/maximize.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    opacity: 0;
-    transition: 0.3s;
-    transform: translate(-50%, -50%);
-  }
-  
-  &:hover,
-  &:focus {
-    
-    &::before {
-      opacity: 0.5;
-    }
-    
-    &::after {
-      opacity: 1;
-    }
-  }
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: #000;
+  //   opacity: 0;
+  //   transition: 0.3s;
+  // }
+  // 
+  // &::after {
+  //   content: '';
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   width: 50px;
+  //   height: 50px;
+  //   background-image: url('../img/svg/maximize.svg');
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  //   background-size: contain;
+  //   opacity: 0;
+  //   transition: 0.3s;
+  //   transform: translate(-50%, -50%);
+  // }
+  // 
+  // &:hover,
+  // &:focus {
+  // 
+  //   &::before {
+  //     opacity: 0.5;
+  //   }
+  // 
+  //   &::after {
+  //     opacity: 1;
+  //   }
+  // }
 }
 
 .gallery__img {
