--- a/study-summer/app/sass/blocks/popup.scss
+++ b/study-summer/app/sass/blocks/popup.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  width: 1080px;
   transition: 0.3s;
   transform: translate(-50%, -50%)
              scale(1);
@@ -17,6 +18,7 @@
 
 .popup__webp,
 .popup__jpg {
+  width: 100%;
   border-radius: 7px;
 }
 
