--- a/study-summer/app/sass/blocks/photo.scss
+++ b/study-summer/app/sass/blocks/photo.scss
@@ -169,7 +169,7 @@
     font-size: 0;
     border: none;
     background-color: transparent;
-    background-image: url('../img/svg/arrow.svg');
+    background-image: url('../img/svg/arrow-blue.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
