--- a/study-summer/app/sass/blocks/advantages.scss
+++ b/study-summer/app/sass/blocks/advantages.scss
@@ -19,7 +19,7 @@
   width: 50%;
   margin-left: 30px;
   
-  &--second {
+  &--reverse {
     margin-left: auto;
     margin-right: 30px;
     width: 470px;
@@ -145,7 +145,7 @@
     align-items: flex-start;
     flex-direction: column;
     
-    &--second {
+    &--reverse {
       align-items: center;
       flex-direction: row;
     }
@@ -164,7 +164,7 @@
     padding-right: 15px;
     padding-left: 15px;
     
-    &--second {
+    &--reverse {
       order: 1;
       width: 50%;
       margin: 0;
@@ -193,14 +193,14 @@
   .advantages__wrapper {
     margin-bottom: 50px;
     
-    &--second {
+    &--reverse {
       flex-direction: column;
     }
   }
   
   .advantages__content {
     
-    &--second {
+    &--reverse {
       width: auto;
     }
   }
