--- a/study-summer/app/sass/blocks/popup.scss
+++ b/study-summer/app/sass/blocks/popup.scss
@@ -3,6 +3,7 @@
   top: 50%;
   left: 50%;
   width: 1080px;
+  height: 800px;
   transition: 0.3s;
   transform: translate(-50%, -50%)
              scale(1);
@@ -19,7 +20,9 @@
 .popup__webp,
 .popup__jpg {
   width: 100%;
+  height: 100%;
   border-radius: 7px;
+  object-fit: cover;
 }
 
 .popup__control {
@@ -73,10 +76,7 @@
 @media screen and ($tablet-widths) {
   .popup {
     width: 95%;
-  }
-  
-  .popup__jpg {
-    width: 100%;
+    height: 600px;
   }
   
   .popup__control {
@@ -93,6 +93,10 @@
 }
 
 @media screen and ($mobile-widths) {
+  .popup {
+    height: auto;
+  }
+  
   .popup__control {
     
     &--prev {
