--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/gallery';
 @import 'blocks/features';
 @import 'blocks/advantages';
+@import 'blocks/offer';
 @import 'blocks/programs';
 @import 'blocks/leaders';
 @import 'blocks/geography';
