--- a/study-summer/app/sass/blocks/nav.scss
+++ b/study-summer/app/sass/blocks/nav.scss
@@ -17,7 +17,6 @@
   
   &:last-child {
     margin-right: 0;
-    margin-left: 30px;
   }
 }
 
@@ -118,6 +117,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    outline: none;
     transition: 0.5s linear;
     
     &--open {
