--- a/study-summer/app/sass/blocks/slider.scss
+++ b/study-summer/app/sass/blocks/slider.scss
@@ -10,10 +10,11 @@
   position: absolute;
   top: 0;
   left: 50%;
-  width: 450px;
   margin: 0;
   padding-top: 10px;
+  padding-right: 20px;
   padding-bottom: 15px;
+  padding-left: 20px;
   color: $blue;
   font-size: 25px;
   font-weight: bold;
@@ -200,62 +201,9 @@
   }
 }
 
-.slider__social {
-  position: absolute;
-  top: 80px;
-  right: -50px;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.slider__link {
-  display: block;
-  width: 25px;
-  height: 25px;
-  margin-bottom: 10px;
-  font-size: 0;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  opacity: 0.7;
-  outline: none;
-  transition: 0.3s;
-  
-  &:hover,
-  &:focus {
-    opacity: 1;
-    transform: scale(1.1);
-  }
-  
-  &--info {
-    background-image: url('../img/svg/info.svg');
-  }
-  
-  &--facebook {
-    background-image: url('../img/svg/facebook.svg');
-  }
-  
-  &--instagram {
-    background-image: url('../img/svg/instagram.svg');
-  }
-  
-  &--google {
-    background-image: url('../img/svg/google.svg');
-  }
-}
-
-@media screen and (max-width: 1325px) {
-  .slider__social {
-    display: none;
-  }
-}
-
 @media screen and ($tablet-widths) {
   .slider__title {
-    width: 350px;
+    width: 420px;
     font-size: 20px;
   }
   
@@ -286,7 +234,11 @@
   }
   
   .slider__title {
-    width: 300px;
+    width: 250px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 10px;
+    padding-left: 0;
     font-size: 18px;
   }
   
