--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'blocks/header';
 @import 'blocks/nav';
 @import 'blocks/slider';
+@import 'blocks/social';
 @import 'blocks/about';
 @import 'blocks/gallery';
 @import 'blocks/features';
