fix width for mobile

--- a/study-summer/app/sass/blocks/footer.scss
+++ b/study-summer/app/sass/blocks/footer.scss
@@ -53,6 +53,11 @@
     background-image: url('../img/footer-bg-mobile.jpg');
   }
   
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  
   .footer__address,
   .footer__phones {
     margin: 0 auto;
