--- a/study-summer/app/sass/blocks/geography.scss
+++ b/study-summer/app/sass/blocks/geography.scss
@@ -20,14 +20,54 @@
 
 .geography__item {
   position: relative;
+  width: 100%;
   height: 200px;
   margin-right: 5px;
   margin-bottom: 5px;
   border-radius: 7px;
   overflow: hidden;
   
+  &:nth-child(1) {
+    width: 25%;
+  }
+  
+  &:nth-child(2) {
+    width: 12.5%;
+  }
+  
+  &:nth-child(3) {
+    width: 12.5%;
+  }
+  
+  &:nth-child(4) {
+    width: 50%;
+  }
+  
   &:last-child {
     margin-right: 0;
+  }
+  
+  &--second {
+    
+    &:nth-child(1) {
+      width: 12.7%;
+    }
+    
+    &:nth-child(2) {
+      width: 25%;
+    }
+    
+    &:nth-child(3) {
+      width: 12.5%;
+    }
+    
+    &:nth-child(4) {
+      width: 25%;
+    }
+    
+    &:nth-child(5) {
+      width: 25%;
+    }
   }
 }
 
