--- a/study-canada-2019/app/sass/blocks/title.scss
+++ b/study-canada-2019/app/sass/blocks/title.scss
@@ -55,16 +55,12 @@
 }
 
 @media screen and ($tablet-widths) {
+  .title {
+    background: url('../img/title-bg.jpg') no-repeat right / cover;
+  }
+  
   .title__content {
-    width: 50%;
-  }
-  
-  .title__heading {
-    font-size: 35px;
-  }
-  
-  .title__subheading {
-    font-size: 25px;
+    width: auto;
   }
 }
 
@@ -74,21 +70,22 @@
     background: none;
   }
   
-  .title__content {
-    width: auto;
-  }
-  
   .title__heading,
   .title__subheading {
     text-align: center;
   }
   
   .title__heading {
-    font-size: 27px;
-    line-height: 30px;
+    font-size: 30px;
+    
+    &--big {
+      padding-left: 0;
+      font-size: 40px;
+    }
   }
   
   .title__subheading {
-    font-size: 20px;
+    width: auto;
+    // font-size: 20px;
   }
 }
