--- a/study-summer/app/sass/blocks/photo.scss
+++ b/study-summer/app/sass/blocks/photo.scss
@@ -186,8 +186,7 @@
       transform: rotate(180deg);
       
       &:active {
-        transform: rotate(180deg)
-                   scale(1.05);
+        transform: rotate(180deg) scale(1.05);
       }
     }
   }
@@ -212,8 +211,10 @@
   
   .photo__item {
     width: 100%;
-    height: auto;
+    height: 100%;
+    margin-top: 3px;
     margin-right: 0;
+    margin-bottom: 3px;
     
     &::before,
     &::after {
@@ -227,6 +228,7 @@
     max-width: 395px;
     min-width: 300px;
     margin: auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
   }
   
   .photo__call {
