--- a/study-summer/app/sass/blocks/programs.scss
+++ b/study-summer/app/sass/blocks/programs.scss
@@ -261,6 +261,7 @@
     
     &:hover,
     &:focus {
+      box-shadow: none;
       background-color: gray;
       transform: translateY(0);
       
