--- a/study-summer/app/sass/blocks/advantages.scss
+++ b/study-summer/app/sass/blocks/advantages.scss
@@ -95,8 +95,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  // width: 70px;
   width: 70px;
-  height: 50px;
+  height: 70px;
   font-size: 0;
   border: none;
   background-color: transparent;
@@ -115,32 +116,51 @@
   }
 }
 
-.advantages__media {
+// .advantages__media {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   width: 1100px;
+//   height: 619px;
+//   border-radius: 7px;
+//   background-color: #000;
+//   overflow: hidden;
+//   transition: 0.3s;
+//   transform: translate(-50%, -50%);
+//   z-index: 6;
+// 
+//   &--hide {
+//     opacity: 0;
+//     visibility: hidden;
+//   }
+// }
+// 
+// .advantages__video {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   border: none;
+// }
+
+.advantages__video {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 1100px;
-  height: 619px;
+  width: 1200px;
+  height: auto;
   border-radius: 7px;
-  background-color: #000;
-  overflow: hidden;
+  opacity: 1;
   transition: 0.3s;
   transform: translate(-50%, -50%);
+  visibility: visible;
   z-index: 6;
   
   &--hide {
     opacity: 0;
     visibility: hidden;
   }
-}
-
-.advantages__video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
 }
 
 @media screen and ($tablet-widths) {
@@ -186,9 +206,13 @@
     order: 2;
   }
   
-  .advantages__media {
-    width: 745px;
-    height: 420px;
+  // .advantages__media {
+  //   width: 745px;
+  //   height: 420px;
+  // }
+  
+  .advantages__video {
+    width: 95%;
   }
 }
 
@@ -219,7 +243,7 @@
     background-position: center;
   }
   
-  .advantages__media {
-    width: 95%;
-  }
+  // .advantages__media {
+  //   width: 95%;
+  // }
 }
