fix anchor padding for mobile

--- a/study-summer/app/sass/blocks/advantages.scss
+++ b/study-summer/app/sass/blocks/advantages.scss
@@ -217,6 +217,10 @@
 }
 
 @media screen and ($mobile-widths) {
+  .advantages {
+    padding-top: 50px;
+  }
+  
   .advantages__wrapper {
     margin-bottom: 50px;
     
