--- a/study-summer/app/sass/blocks/features.scss
+++ b/study-summer/app/sass/blocks/features.scss
@@ -72,7 +72,7 @@
 
 @media screen and ($mobile-widths) {
   .features {
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
   
   .features__item {
