--- a/study-summer/app/sass/blocks/offer.scss
+++ b/study-summer/app/sass/blocks/offer.scss
@@ -84,6 +84,10 @@
 }
 
 @media screen and ($mobile-widths) {
+  .offer {
+    margin-bottom: 0;
+  }
+  
   .offer__wrapper {
     align-items: center;
   }
