--- a/study-summer/app/sass/blocks/reviews.scss
+++ b/study-summer/app/sass/blocks/reviews.scss
@@ -189,7 +189,7 @@
 
 @media screen and ($mobile-widths) {
   .reviews {
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
   
   .reviews__wrapper {
