--- a/study-summer/app/sass/blocks/geography.scss
+++ b/study-summer/app/sass/blocks/geography.scss
@@ -168,6 +168,7 @@
 @media screen and ($mobile-widths) {
   .geography {
     margin-bottom: 50px;
+    padding-top: 50px;
   }
   
   .geography__title {
