--- a/study-summer/app/sass/blocks/leaders.scss
+++ b/study-summer/app/sass/blocks/leaders.scss
@@ -160,7 +160,8 @@
 
 @media screen and ($mobile-widths) {
   .leaders {
-    margin-bottom: 50px;
+    margin-bottom: 0;
+    padding-top: 50px;
   }
   
   .leaders__wrapper {
