first step to add form

--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -14,9 +14,10 @@
 @import 'blocks/offer';
 @import 'blocks/programs';
 @import 'blocks/leaders';
-@import 'blocks/geography';
-@import 'blocks/reviews';
 @import 'blocks/photo';
+@import 'blocks/reviews';
+@import 'blocks/form';
+@import 'blocks/geography';
 @import 'blocks/footer';
 
 @import 'blocks/popup';
