--- a/study-summer/app/sass/blocks/leaders.scss
+++ b/study-summer/app/sass/blocks/leaders.scss
@@ -1,5 +1,5 @@
 .leaders {
-  margin-bottom: 70px; 
+  padding-top: 70px;
 }
 
 .leaders__wrapper {
@@ -10,6 +10,7 @@
 }
 
 .leaders__title {
+  margin: 0;
   color: $text;
   font-size: 30px;
   font-weight: bold;
