--- a/study-summer/app/sass/blocks/leaders.scss
+++ b/study-summer/app/sass/blocks/leaders.scss
@@ -57,7 +57,7 @@
   left: 0px;
   display: flex;
   justify-content: space-between;
-  width: 300%;
+  width: 200%;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -91,9 +91,9 @@
 }
 
 .leaders__position {
-  color: $blue;
-  font-size: 18px;
-  font-weight: 500;
+  color: $text;
+  font-size: 15px;
+  font-weight: normal;
 }
 
 .leaders__text {
@@ -101,7 +101,7 @@
   margin-bottom: 0;
   padding-right: 25px;
   padding-left: 25px;
-  color: $text;
+  color: $blue;
   font-size: 14px;
   font-weight: normal;
 }
@@ -150,7 +150,7 @@
   }
   
   .leaders__list {
-    width: 600%;
+    width: 400%;
   }
   
   .leaders__item {
@@ -181,7 +181,7 @@
   }
   
   .leaders__list {
-    width: 1200%;
+    width: 800%;
     transition: 0.5s;
   }
   
