--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -16,7 +16,7 @@
 @import 'blocks/leaders';
 @import 'blocks/photo';
 @import 'blocks/reviews';
-@import 'blocks/form';
+@import 'blocks/request';
 @import 'blocks/geography';
 @import 'blocks/footer';
 
