--- a/study-summer/uk/app/sass/blocks/offer.scss
+++ b/study-summer/uk/app/sass/blocks/offer.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .offer__title {
@@ -56,6 +57,33 @@
   
   &--big {
     font-size: 25px;
+  }
+}
+
+.offer__button {
+  box-sizing: border-box;
+  display: block;
+  width: 270px;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 43px;
+  background-color: $red;
+  outline: none;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 10px 2px darken($red, 20%);
+  }
+  
+  &:active {
+    box-shadow: 0 0 10px 5px darken($red, 20%);
   }
 }
 
