--- a/study-summer/usa/app/sass/blocks/programs.scss
+++ b/study-summer/usa/app/sass/blocks/programs.scss
@@ -56,7 +56,6 @@
 
 .programs__list {
   display: flex;
-  // justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
@@ -248,6 +247,7 @@
   display: block;
   width: 250px;
   margin: auto;
+  margin-bottom: 20px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
@@ -302,6 +302,33 @@
         transform: rotate(0);
       }
     }
+  }
+}
+
+.programs__select {
+  box-sizing: border-box;
+  display: block;
+  width: 270px;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 43px;
+  background-color: $red;
+  outline: none;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 10px 2px darken($red, 20%);
+  }
+  
+  &:active {
+    box-shadow: 0 0 10px 5px darken($red, 20%);
   }
 }
 
