--- a/study-summer/ireland/app/sass/blocks/request.scss
+++ b/study-summer/ireland/app/sass/blocks/request.scss
@@ -60,6 +60,7 @@
 .request__input {
   box-sizing: border-box;
   width: 370px; 
+  margin-right: 15px;
   padding-bottom: 8px;
   color: rgba(41, 47, 72, 0.5);
   font-size: 16px;
