--- a/study-summer/canada/app/sass/blocks/request.scss
+++ b/study-summer/canada/app/sass/blocks/request.scss
@@ -9,10 +9,11 @@
 }
 
 .request__column {
-  width: 770px;
+  // width: 770px;
+  width: 560px;
   margin-right: 30px;
   margin-left: auto;
-  padding-left: 15px;
+  // padding-left: 15px;
 }
 
 .request__title {
@@ -31,6 +32,8 @@
 
 .request__group {
   position: relative;
+  width: 100%;
+  margin-right: 15px;
 }
 
 .request__row {
@@ -52,15 +55,14 @@
   
   &--active {
     top: -15px;
-    color: $blue;
-    font-size: 12px;
+    color: #6a7efc;
+    font-size: 12px;  
   }
 }
 
 .request__input {
   box-sizing: border-box;
-  width: 370px; 
-  margin-right: 15px;
+  width: 100%;
   padding-bottom: 8px;
   color: rgba(41, 47, 72, 0.5);
   font-size: 16px;
@@ -111,7 +113,7 @@
 }
 
 .request__decorate {
-  width: 745px;
+  width: 50%;
   height: 300px;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
@@ -153,12 +155,34 @@
 }
 
 @media screen and ($tablet-widths) {
+  .request__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
   .request__title {
     font-size: 22px;
   }
   
-  .request__input {
-    margin-right: 5px;
+  .request__column {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  
+  .request__form {
+    width: 700px;
+    margin: auto;
+  }
+  
+  .request__decorate {
+    width: 100%;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    background-position: center;
   }
 }
 
