--- a/study-summer/ireland/app/sass/blocks/leaders.scss
+++ b/study-summer/ireland/app/sass/blocks/leaders.scss
@@ -73,6 +73,7 @@
   text-align: center;
   border-radius: 7px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
 }
 
 .leaders__figure {
@@ -105,6 +106,10 @@
   color: $blue;
   font-size: 14px;
   font-weight: normal;
+}
+
+.leaders__link {
+  color: inherit;
 }
 
 .leaders__control {
