--- a/study-summer/ireland/app/sass/blocks/request.scss
+++ b/study-summer/ireland/app/sass/blocks/request.scss
@@ -117,37 +117,6 @@
 //     box-shadow: 0 0 10px 2px darken($blue, 20%);
 //   }
 // }
-// 
-// .request__select {
-//   box-sizing: border-box;
-//   display: block;
-//   width: 270px;
-//   margin: auto;
-//   padding-top: 10px;
-//   padding-bottom: 10px;
-//   color: #fff;
-//   font-size: 18px;
-//   font-weight: 500;
-//   text-align: center;
-//   text-decoration: none;
-//   border-radius: 43px;
-//   background-color: $red;
-//   outline: none;
-//   transition: 0.3s;
-// 
-//   &--left {
-//     margin: 0;
-//   }
-// 
-//   &:hover,
-//   &:focus {
-//     box-shadow: 0 0 10px 2px darken($red, 20%);
-//   }
-// 
-//   &:active {
-//     box-shadow: 0 0 10px 5px darken($red, 20%);
-//   }
-// }
 
 .request__decorate {
   width: 50%;
@@ -158,6 +127,37 @@
   background-repeat: no-repeat;
   background-position: left;
   background-size: cover;
+}
+
+.request__select {
+  box-sizing: border-box;
+  display: block;
+  width: 270px;
+  margin: auto;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 43px;
+  background-color: $red;
+  outline: none;
+  transition: 0.3s;
+
+  &--left {
+    margin: 0;
+  }
+
+  &:hover,
+  &:focus {
+    box-shadow: 0 0 10px 2px darken($red, 20%);
+  }
+
+  &:active {
+    box-shadow: 0 0 10px 5px darken($red, 20%);
+  }
 }
 
 @media screen and ($tablet-widths) {
