--- a/study-summer/ireland/app/sass/blocks/programs.scss
+++ b/study-summer/ireland/app/sass/blocks/programs.scss
@@ -14,6 +14,13 @@
   color: $text;
   font-size: 30px;
   font-weight: bold;
+  
+  &--sub {
+    display: block;
+    color: $blue;
+    font-size: 20px;
+    font-weight: 500;
+  }
 }
 
 .programs__button {
