--- a/study-summer/usa/app/sass/blocks/leaders.scss
+++ b/study-summer/usa/app/sass/blocks/leaders.scss
@@ -106,6 +106,10 @@
   font-weight: normal;
 }
 
+.leaders__link {
+  color: inherit;
+}
+
 .leaders__control {
   display: flex;
   align-items: center;
