--- a/study-region/app/sass/style.scss
+++ b/study-region/app/sass/style.scss
@@ -8,5 +8,7 @@
 @import 'blocks/people';
 @import 'blocks/children';
 @import 'blocks/holidays';
-
+@import 'blocks/group';
+@import 'blocks/call';
+@import 'blocks/footer';
 @import 'blocks/request';
