--- a/study-region/app/sass/blocks/holidays.scss
+++ b/study-region/app/sass/blocks/holidays.scss
@@ -14,19 +14,24 @@
   display: flex;
   justify-content: space-between;
   margin: 0;
+  margin-bottom: 40px;
   padding: 0;
   list-style: none;
 }
 
 .holidays__item {
   width: 370px;
-  padding-top: 170px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
   background-color: #fff;
 }
 
-.holidays__camp {
+.holidays__logo {
+  display: block;
+  margin: auto;
+}
+
+.holidays__name {
   display: block;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -47,5 +52,27 @@
   &--source {
     color: #FF5959;
     font-weight: 500;
+  }
+}
+
+.holidays__wrapper {
+  background-image: url('../img/holidays-bg.png');
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.holidays__sublist {
+  width: 460px;
+  list-style-image: url('../img/svg/li.svg');
+}
+
+.holidays__subitem {
+  margin-bottom: 10px;
+  color: $text;
+  font-size: 16px;
+  font-weight: 300;
+  
+  &:last-child {
+    margin-bottom: 25px;
   }
 }
